# memnexus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PYPI_RELEASE_GUIDE.md  README.md  README.zh.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  SECURITY.md  main.py  pyproject.toml  typos.toml
.github/: pr-title-checker-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pr-check.yml  pr-title-checker.yml  release.yml  typos.yml
.sisyphus/: boulder.json
.sisyphus/plans/: memory-v3-upgrade.md  uv-migration.md
benchmark/: README.md  __init__.py  run.py
benchmark/config/: benchmark.yaml
benchmark/core/: __init__.py  base.py  pipeline.py  reporter.py  runner.py
benchmark/datasets/: __init__.py  loader.py  synthetic.py
benchmark/metrics/: __init__.py  performance.py  ranking.py  retrieval.py
benchmark/tasks/: __init__.py  code_retrieval.py  git_retrieval.py  indexing.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CICD.md  CLI.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  PLAN_v050.md  PRD.md  PROTOCOL_ACP.md  PROTOCOL_MCP.md  REQUIREMENTS_SESSION_EXPLORER.md  ROADMAP.md  SESSION_EXPLORER_COMPLIANCE_REPORT.md  SUPERMEMORY_COMPARISON.md  VISION.md  WEEK1_ACCEPTANCE.md  openviking_testing_benchmark_analysis.md
examples/: incremental_index_demo.py  memory_v2_demo.py  test_global_memory.py
frontend/: AGENTS.md  index.html  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Interventions.tsx  Memory.tsx  Orchestration.tsx  SessionDetail.tsx  Sessions.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/store/: useStore.ts
hooks/: README.md  pre-push
scripts/: check_version.py  install-hooks.sh  verify-week1.sh
src/memnexus/: AGENTS.md  __init__.py  cli.py  code_memory.py  global_memory.py  server.py
src/memnexus/agents/: __init__.py  base.py  wrapper.py
src/memnexus/core/: config.py  session.py
src/memnexus/kimi_plugin/: SKILL.md  plugin.json
src/memnexus/memory/: __init__.py  advanced_rag.py  code.py  context.py  embedder.py  git.py  index_state.py  rag.py  store.py  sync.py  watcher.py
src/memnexus/memory/compression/: README.md  __init__.py
src/memnexus/memory/core/: __init__.py  types.py
src/memnexus/memory/knowledge_graph/: README.md  __init__.py  builder.py
src/memnexus/memory/layers/: README.md  __init__.py  base.py  manager.py
src/memnexus/memory/retrieval/: README.md  __init__.py  adaptive.py
src/memnexus/memory/rmt/: README.md  __init__.py  curriculum.py  memory_manager.py  segment_processor.py
src/memnexus/orchestrator/: __init__.py  engine.py  intervention.py  scheduler.py
src/memnexus/protocols/: __init__.py  acp.py
src/memnexus/scripts/: kimi_plugin.py
src/memnexus/session/: __init__.py  deduplicator.py  explorer.py  fingerprint.py  models.py  scorer.py  storage.py
tests/: __init__.py  manual_test_git.py  test_git_integration.py  test_global_memory_integration.py  test_session.py  test_week2_complete.py  test_week3_complete.py
