[project]
name = "memnexus"
version = "0.3.0"
description = "Code Memory for AI Programming Tools - Persistent memory for Kimi CLI, Claude Code, and other AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Leeelics", email = "leeelics@example.com"}
]
keywords = ["ai", "code-memory", "kimi-cli", "claude-code", "git", "vector-search", "rag", "developer-tools", "code-intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    
    # CLI
    "typer>=0.15.0",
    "rich>=13.9.0",
    
    # Web API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    
    # Database
    "lancedb>=0.18.0",
    "pyarrow>=18.0",  # LanceDB dependency
    
    # Git integration
    "gitpython>=3.1.0",
    
    # Lightweight embedding
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# External API support (OpenAI) for better embeddings
api = [
    "openai>=1.0.0",
]

# Real-time sync features (requires Redis)
sync = [
    "redis>=5.2.0",
]

# All optional features
full = [
    "openai>=1.0.0",
    "redis>=5.2.0",
]

# Frontend (not maintained)
frontend = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
    "altair>=5.5.0",
]

[project.scripts]
memnexus = "memnexus.cli:main"
mnx = "memnexus.cli:main"

[project.urls]
Homepage = "https://github.com/Leeelics/MemNexus"
Repository = "https://github.com/Leeelics/MemNexus"
Documentation = "https://github.com/Leeelics/MemNexus#readme"
Changelog = "https://github.com/Leeelics/MemNexus/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memnexus"]
include = [
    "src/memnexus/kimi_plugin/*.json",
    "src/memnexus/kimi_plugin/*.md",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["memnexus"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    # "--cov=memnexus",
    # "--cov-report=term-missing",
    # "--cov-report=html:coverage_html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/memnexus"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html"

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "factory-boy>=3.3.0",
    "faker>=35.0.0",

    # Linting & Formatting
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.1.0",

    # Debugging
    "ipython>=8.31.0",
    "ipdb>=0.13.13",
    "pdbpp>=0.10.3",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]
